task5/tests/group/tests/output/t19.out
lli: lli: tests/group/tests/output/t19.ll:30:15: error: use of undefined value '%-21958'
%t9 = zext i8 %-21958 to i32
              ^

